--- a/src/components/SearchPage/SearchPage.css
+++ b/src/components/SearchPage/SearchPage.css
@@ -1,5 +1,5 @@
 .search-page-container {
-    background-color: #f0f0f0; /* Couleur de fond */
+    background-color: #534444; /* Couleur de fond */
     padding: 20px;            /* Espace autour du contenu */
     text-align: center;        /* Centrage du texte */
     color: #333;               /* Couleur du texte */
@@ -11,20 +11,20 @@
     width: 80%;
     max-width: 400px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #272222;
     border-radius: 5px;
   }
   
   .search-button {
     padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+    background-color: #7bb5f3;
+    color: rgb(29, 24, 24);
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
   
   .search-button:hover {
-    background-color: #0056b3;
+    background-color: #85b3e5;
   }
   
